# release-note-writer

./: Dockerfile  README.md  action.yml  entrypoint.sh  proposal-remove-docker.md  pyproject.toml  release_note_writer.py
